--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                     <div class="mb-3">
                         <label class="form-label">Top Right Text (Optional)</label>
-                        <input type="text" class="form-control" id="topRightText" placeholder="e.g., 56 inch panna">
+                        <input type="text" class="form-control" id="topRightText" placeholder="">
                     </div>
                     
                     <div class="mb-3">
