--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <div class="icon-box purple mb-3">
                                 <i class="bi bi-printer"></i>
                             </div>
-                            <h3 class="h6 fw-semibold mb-2">Sticker Printer</h3>
+                            <h3 class="h6 fw-semibold mb-2">Sticker Printer v2</h3>
                             <p class="small mb-0 flex-grow-1">Advanced sticker printing tool with customizable settings and preview options.</p>
                         </div>
                     </a>
