--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
         
         .header-section {
-            background: rgba(30, 41, 59, 0.8);
+           background: rgb(199 0 119 / 80%);
             backdrop-filter: blur(20px);
             border-bottom: 1px solid rgba(148, 163, 184, 0.2);
         }
