--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="w-12 h-12 bg-indigo-100 rounded-lg flex items-center justify-center mb-4 group-hover:bg-indigo-500 transition-colors duration-200">
                         <i class="fas fa-file-alt text-indigo-600 text-xl group-hover:text-white"></i>
                     </div>
-                    <h3 class="text-lg font-semibold text-gray-900 mb-2">Letter Template</h3>
+                    <h3 class="text-lg font-semibold text-gray-900 mb-2">Alphabet/Icons Template</h3>
                     <p class="text-sm text-gray-600">Printable grid templates</p>
                 </div>
             </a>
