--- a/letter.html
+++ b/letter.html
@@ -156,6 +156,11 @@
                         <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
                         <i class="fa-solid fa-circle-right"></i>
                     </div>
+                    <div draggable="true" data-icon="arrow-right"
+                        class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
+                        <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
+                        <i class="fa-solid fa-angles-right"></i>
+                    </div>
                     <div draggable="true" data-icon="arrow-up-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-up text-gray-700 text-lg"
