--- a/letter.html
+++ b/letter.html
@@ -147,16 +147,16 @@
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-left text-gray-700 text-lg"></i>
                     </div>
-                    <div draggable="true" data-icon="arrow-right"
+                    <!-- <div draggable="true" data-icon="arrow-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
-                    </div>
+                    </div> -->
                     <div draggable="true" data-icon="arrow-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
                         <i class="fa-solid fa-circle-right"></i>
                     </div>
-                    <div draggable="true" data-icon="arrow-right"
+                    <!-- <div draggable="true" data-icon="arrow-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
                         <i class="fa-solid fa-angles-right"></i>
@@ -165,7 +165,7 @@
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
                         <i class="fa-solid fa-right-long"></i>
-                    </div>
+                    </div> -->
                     <div draggable="true" data-icon="arrow-up-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-up text-gray-700 text-lg"
