--- a/letter.html
+++ b/letter.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -56,7 +55,7 @@
         }
 
         .grid-box {
-            border: 2px solid #333;
+            border: none;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -73,18 +72,14 @@
 
         .grid-box.selected {
             background-color: #dbeafe;
-            border-color: #3b82f6;
         }
 
         .grid-box:focus {
             background-color: #fef3c7;
-            border-color: #f59e0b;
         }
 
         .grid-box.drag-over {
             background-color: #bfdbfe !important;
-            border-color: #3b82f6 !important;
-            border-width: 3px;
         }
 
         .grid-box {
@@ -134,53 +129,61 @@
                 </div>
 
                 <!-- Icons -->
-                <div class="flex gap-1">
+                <div class="flex gap-1 flex-wrap">
+                    <!-- Arrow Up -->
                     <div draggable="true" data-icon="arrow-up"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-up text-gray-700 text-lg"></i>
                     </div>
+                    <!-- Arrow Down -->
                     <div draggable="true" data-icon="arrow-down"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-down text-gray-700 text-lg"></i>
                     </div>
+                    <!-- Arrow Left -->
                     <div draggable="true" data-icon="arrow-left"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-left text-gray-700 text-lg"></i>
                     </div>
-                    <!-- <div draggable="true" data-icon="arrow-right"
-                        class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
-                        <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
-                    </div> -->
+                    <!-- Arrow Right (standard) -->
                     <div draggable="true" data-icon="arrow-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
-                        <i class="fa-solid fa-circle-right"></i>
                     </div>
-                    <!-- <div draggable="true" data-icon="arrow-right"
+                    <!-- Circle Right Arrow -->
+                    <div draggable="true" data-icon="circle-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
-                        <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
-                        <i class="fa-solid fa-angles-right"></i>
+                        <i class="fa-solid fa-circle-right text-gray-700 text-lg"></i>
                     </div>
-                    <div draggable="true" data-icon="arrow-right"
+                    <!-- Angles Right (double chevron) -->
+                    <div draggable="true" data-icon="angles-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
-                        <i class="fas fa-arrow-right text-gray-700 text-lg"></i>
-                        <i class="fa-solid fa-right-long"></i>
-                    </div> -->
+                        <i class="fa-solid fa-angles-right text-gray-700 text-lg"></i>
+                    </div>
+                    <!-- Right Long Arrow -->
+                    <div draggable="true" data-icon="right-long"
+                        class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
+                        <i class="fa-solid fa-right-long text-gray-700 text-lg"></i>
+                    </div>
+                    <!-- Arrow Up-Right (diagonal) -->
                     <div draggable="true" data-icon="arrow-up-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-up text-gray-700 text-lg"
                             style="transform: rotate(45deg); display: inline-block;"></i>
                     </div>
+                    <!-- Arrow Down-Right (diagonal) -->
                     <div draggable="true" data-icon="arrow-down-right"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-down text-gray-700 text-lg"
                             style="transform: rotate(-45deg); display: inline-block;"></i>
                     </div>
+                    <!-- Arrow Down-Left (diagonal) -->
                     <div draggable="true" data-icon="arrow-down-left"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-down text-gray-700 text-lg"
                             style="transform: rotate(45deg); display: inline-block;"></i>
                     </div>
+                    <!-- Arrow Up-Left (diagonal) -->
                     <div draggable="true" data-icon="arrow-up-left"
                         class="icon-drag px-2 py-1 bg-gray-100 rounded hover:bg-gray-200 cursor-move">
                         <i class="fas fa-arrow-up text-gray-700 text-lg"
@@ -260,6 +263,24 @@
                             </button>
                         </div>
                         <div class="col-6 col-md-3">
+                            <button class="btn btn-outline-dark w-100 py-3" onclick="applyArrow('circle-right')">
+                                <i class="fa-solid fa-circle-right fa-2x"></i>
+                                <div class="mt-2 small">Circle Right</div>
+                            </button>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <button class="btn btn-outline-dark w-100 py-3" onclick="applyArrow('angles-right')">
+                                <i class="fa-solid fa-angles-right fa-2x"></i>
+                                <div class="mt-2 small">Angles Right</div>
+                            </button>
+                        </div>
+                        <div class="col-6 col-md-3">
+                            <button class="btn btn-outline-dark w-100 py-3" onclick="applyArrow('right-long')">
+                                <i class="fa-solid fa-right-long fa-2x"></i>
+                                <div class="mt-2 small">Long Right</div>
+                            </button>
+                        </div>
+                        <div class="col-6 col-md-3">
                             <button class="btn btn-outline-dark w-100 py-3" onclick="applyArrow('arrow-up-right')">
                                 <i class="fas fa-arrow-up fa-2x" style="transform: rotate(45deg);"></i>
                                 <div class="mt-2 small">Up-Right</div>
@@ -304,7 +325,7 @@
         let draggedIconName = null;
 
         function generateGrid() {
-            const rows = 12;  // Increased to 12 rows to fill the page
+            const rows = 12;
             const cols = 8;
             const container = document.getElementById('gridContainer');
 
@@ -322,9 +343,7 @@
                 box.addEventListener('input', (e) => {
                     const text = e.target.innerText.trim();
                     if (text.length > 1 && !text.includes('<')) {
-                        // Keep only the last character
                         e.target.innerText = text.slice(-1).toUpperCase();
-                        // Move cursor to end
                         const range = document.createRange();
                         const sel = window.getSelection();
                         range.selectNodeContents(e.target);
@@ -336,40 +355,35 @@
                     }
                 });
 
-                // Handle Enter key to move to next box
+                // Keyboard navigation
                 box.addEventListener('keydown', (e) => {
                     if (e.key === 'Enter') {
                         e.preventDefault();
                         const nextBox = document.querySelector(`[data-index="${i + 1}"]`);
                         if (nextBox) nextBox.focus();
                     } else if (e.key === 'Delete') {
-                        // Clear the entire box content on Delete key
                         e.preventDefault();
                         box.innerHTML = '';
                     } else if (e.key === 'ArrowRight') {
-                        // Move to next box (right)
                         e.preventDefault();
                         const nextBox = document.querySelector(`[data-index="${i + 1}"]`);
                         if (nextBox) nextBox.focus();
                     } else if (e.key === 'ArrowLeft') {
-                        // Move to previous box (left)
                         e.preventDefault();
                         const prevBox = document.querySelector(`[data-index="${i - 1}"]`);
                         if (prevBox) prevBox.focus();
                     } else if (e.key === 'ArrowDown') {
-                        // Move down (8 boxes down for 8 columns)
                         e.preventDefault();
                         const downBox = document.querySelector(`[data-index="${i + 8}"]`);
                         if (downBox) downBox.focus();
                     } else if (e.key === 'ArrowUp') {
-                        // Move up (8 boxes up for 8 columns)
                         e.preventDefault();
                         const upBox = document.querySelector(`[data-index="${i - 8}"]`);
                         if (upBox) upBox.focus();
                     }
                 });
 
-                // Handle selection with Ctrl/Cmd + Click
+                // Ctrl/Cmd + Click selection
                 box.addEventListener('click', (e) => {
                     if (e.ctrlKey || e.metaKey) {
                         e.preventDefault();
@@ -377,20 +391,19 @@
                     }
                 });
 
-                // DRAG AND DROP - Allow boxes to receive dropped icons
+                // Drag and drop
                 box.addEventListener('dragover', (e) => {
                     e.preventDefault();
                     box.classList.add('drag-over');
                 });
 
-                box.addEventListener('dragleave', (e) => {
+                box.addEventListener('dragleave', () => {
                     box.classList.remove('drag-over');
                 });
 
                 box.addEventListener('drop', (e) => {
                     e.preventDefault();
                     box.classList.remove('drag-over');
-
                     if (draggedIconName) {
                         dropIconIntoBox(box, draggedIconName);
                     }
@@ -399,27 +412,24 @@
                 container.appendChild(box);
             }
 
-            // Setup drag and drop for icons
             setupIconDragAndDrop();
         }
 
         function setupIconDragAndDrop() {
             const iconElements = document.querySelectorAll('.icon-drag');
-
             iconElements.forEach(iconEl => {
                 iconEl.addEventListener('dragstart', (e) => {
                     draggedIconName = iconEl.dataset.icon;
                     e.dataTransfer.effectAllowed = 'copy';
                 });
-
-                iconEl.addEventListener('dragend', (e) => {
+                iconEl.addEventListener('dragend', () => {
                     draggedIconName = null;
                 });
             });
         }
 
         function dropIconIntoBox(box, iconName) {
-            // Handle diagonal arrows with rotation
+            // Diagonal arrows (rotation-based)
             if (iconName === 'arrow-up-right') {
                 box.innerHTML = `<i class="fas fa-arrow-up" style="transform: rotate(45deg); display: inline-block;"></i>`;
             } else if (iconName === 'arrow-down-right') {
@@ -428,11 +438,16 @@
                 box.innerHTML = `<i class="fas fa-arrow-down" style="transform: rotate(45deg); display: inline-block;"></i>`;
             } else if (iconName === 'arrow-up-left') {
                 box.innerHTML = `<i class="fas fa-arrow-up" style="transform: rotate(-45deg); display: inline-block;"></i>`;
-            } else {
+            }
+            // FA Solid icons (circle-right, angles-right, right-long)
+            else if (iconName === 'circle-right' || iconName === 'angles-right' || iconName === 'right-long') {
+                box.innerHTML = `<i class="fa-solid fa-${iconName}"></i>`;
+            }
+            // Standard FA arrows
+            else {
                 box.innerHTML = `<i class="fas fa-${iconName}"></i>`;
             }
 
-            // Keep box editable so user can click and delete with backspace
             box.contentEditable = 'true';
         }
 
@@ -460,12 +475,9 @@
         function fillAlphabet() {
             const boxes = document.querySelectorAll('.grid-box');
             const alphabet = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-
             boxes.forEach((box, index) => {
-                const letterIndex = index % alphabet.length;
-                box.innerHTML = alphabet[letterIndex];
+                box.innerHTML = alphabet[index % alphabet.length];
             });
-
             selectedBoxes.clear();
             boxes.forEach(box => box.classList.remove('selected'));
         }
@@ -473,24 +485,18 @@
         function applyLetter() {
             const letterInput = document.getElementById('letterInput');
             const letter = letterInput.value.trim();
-
-            if (!letter || letter.length === 0) {
+            if (!letter) {
                 alert('Please enter a letter!');
                 return;
             }
-
             const upperLetter = letter[0].toUpperCase();
             const boxes = document.querySelectorAll('.grid-box');
-
             boxes.forEach(box => {
                 box.innerHTML = upperLetter;
                 box.contentEditable = 'true';
             });
-
             selectedBoxes.clear();
             boxes.forEach(box => box.classList.remove('selected'));
-
-            // Close modal and reset input
             letterInput.value = '';
             bootstrap.Modal.getInstance(document.getElementById('letterModal')).hide();
         }
@@ -500,27 +506,20 @@
             boxes.forEach(box => {
                 dropIconIntoBox(box, iconName);
             });
-
             selectedBoxes.clear();
             boxes.forEach(box => box.classList.remove('selected'));
-
-            // Close modal
             bootstrap.Modal.getInstance(document.getElementById('arrowModal')).hide();
         }
 
-        // Initialize grid on load
+        // Initialize
         generateGrid();
 
-        // Auto-focus letter input when modal opens
         document.getElementById('letterModal').addEventListener('shown.bs.modal', function () {
             document.getElementById('letterInput').focus();
         });
 
-        // Allow Enter key to submit letter
         document.getElementById('letterInput').addEventListener('keypress', function (e) {
-            if (e.key === 'Enter') {
-                applyLetter();
-            }
+            if (e.key === 'Enter') applyLetter();
         });
     </script>
 </body>
